--- a/app/assets/stylesheets/components/_new.scss
+++ b/app/assets/stylesheets/components/_new.scss
@@ -1,12 +1,17 @@
-*{
+.form{
   background: $background-image;
 }
 .form{
-  border: 1px solid $kikoe-blue;
+
   margin: 5em auto;
   padding: 5px;
   width: 800px;
   height: 600px;
+   padding: 20px;
+  box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
  h1{
   font-family:Helvetica,Arial,sans-serif;
     font-size: 32px;
@@ -31,27 +36,52 @@
 }
 
 .category-selector + label {
-  display: block;
-  cursor: pointer;
-  // box-sizing: border-box;
-  width: 100%;
-  font-size: 12px;
-  text-align: left;
-  padding: 10px 10px 30px 10px;
-  // border: 1px solid #EAEAEA;
-  // border-radius: 4px;
-  //  background-color: white;
+    display: block;
+    cursor: pointer;
+    width: 100%;
+    font-size: 12px;
+    text-align: left;
+    padding: 5px;
+    border-radius: 4px;
 }
-
+label{
+  img{
+    border-radius: 50%;
+     box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+  }
+}
 .category-selector:checked + label {
   color: $kikoe-pink !important;
+
 }
 //new-btn
-.new-btn{
+.new-submit-btn{
    transition-duration: 0.4s;
-    background-color: $kikoe-pink;
+    background-color: $kikoe-blue;
+    border-radius: 4px;
 }
-.new-btn:hover{
-  background-color: $kikoe-lightblue;
-  color:$kikoe-pink ;
+.new-submit-btn:hover{
+   background-color: $background-color;
+  color: white;
+   box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+}
+.form-check-input.is-valid ~ .form-check-label {
+  transition-duration: 0.4s;
+  color: black;
+   background: $kikoe-blue;
+   box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255,255,255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+
+}
+.form-check-input.is-valid ~ .form-check-label:hover {
+ background-color: $background-color;
+  color: white;
 }
