--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <%# Counselor, Time, Mode %>
 <div class="form mx-auto" style='width: 500px'>
-  <div class="mx-auto my-3" >
+  <div class="mx-auto my-3" style='width: 500px'>
     <h1>Book a Session</h1>
   </div>
   <%= simple_form_for @booking do |f| %>
@@ -10,7 +10,7 @@
       collection_wrapper_class: 'category-wrapper d-flex',
       item_wrapper_class: 'category-counselor mx-3',
       input_html: {class: 'category-selector'},
-      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4'), counselor.id ] }
+      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 100, width: 100, radius: 'max', background: 'transparent'), counselor.id ] }
     %>
     <%= f.input :start_time, label: 'Start Time', minute_step: 30%>
     <%= f.input :end_time, label: 'End Time', minute_step: 30 %>
@@ -24,7 +24,7 @@
     %>
     <%= f.hidden_field :in_session, value: false, as: :boolean %>
     <%= f.hidden_field :emergency, value: false, as: :boolean %>
-    <%= f.button :submit, 'Submit', class: 'new-btn' %>
+    <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
   <% end %>
 </div>
 <%= render 'shared/footer' %>
