--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -3,7 +3,7 @@
     <%= simple_form_for @booking do |f|  %>
       <%= f.hidden_field :in_session, value: false, as: :boolean %>
       <div class="top-head-button">
-        <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-1' %>
+        <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-2' %>
       </div>
     <% end %>
   </div>
@@ -14,7 +14,7 @@
         <small><%= @booking.created_at.strftime("%a %b %e") %></small>
       </div>
       <% @booking.messages.each do |message| %>
-        <%= render 'messages/message', message: message %>
+        <%= render 'messages/message', message: message, sender: message.sender == current_counselor || message.sender == current_user %>
       <% end %>
     </div>
   </div>
