--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<% if message.sender == current_counselor || message.sender == current_user %>
+<% if sender %>
   <div class="message-container" id="message-<%= message.id %>">
     <div class="chat-message">
       <p><%= message.content %></p>
@@ -8,11 +8,7 @@
 <% else %>
   <div class="message-container-receive" id="message-<%= message.id %>">
     <div class="d-flex">
-      <% if message.sender == @counselor  %>
-        <%= cl_image_tag(@booking.counselor.photo.key, height: 40, width: 40, radius: 'max', background: '#f9fafd') %>
-      <% else %>
-        <%= cl_image_tag(@booking.user.photo.key, height: 40, width: 40, radius: 'max', background: '#f9fafd') %>
-      <% end %>
+      <%= cl_image_tag(message.sender.photo.key, height: 40, width: 40, radius: 'max', background: '#f9fafd') %>
       <div class="chat-message-receive ml-2">
         <p><%= message.content %></p>
       </div>
