--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,10 +1,13 @@
 <div class="page-frame-content">
   <div class="top-head">
-    <p class='ml-4' style="margin-bottom: 0; color: rgba(249, 250, 253, 1)"><%= current_user.nil? ? @user.first_name : @counselor.first_name %></p>
+    <div class="d-flex align-items-center">
+      <%= current_user.nil? ? cl_image_tag(@user.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') : cl_image_tag(@counselor.photo.key, height: 40, width: 40, radius: 'max', style: 'border-radius: 50%; margin-left: 15px') %>
+      <p class='ml-2' style="margin-bottom: 0; color: rgba(249, 250, 253, 1)"><%= current_user.nil? ? @user.first_name : @counselor.first_name %></p>
+    </div>
     <%= simple_form_for @booking do |f|  %>
       <%= f.hidden_field :in_session, value: false, as: :boolean %>
       <div class="top-head-button">
-        <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-2', style: 'color: rgba(249, 250, 253, 1)' %>
+        <%= f.button :submit, 'End Session', class: 'btn btn-sm btn-primary mx-3', style: 'color: rgba(249, 250, 253, 1)' %>
       </div>
     <% end %>
   </div>
